# sourcewell

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
.docs/: backend-plan.md  (+11 more)
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: deps.py  main.py  models.py  targeting.py  worker.py
backend/app/agent/: router.py
backend/app/agents/: chat.py  intake.py  main.py  outreach.py  prompts.py  provenance.py  sourcing.py  strategy.py
backend/app/api/: agent.py  analytics.py  audit.py  auth.py  billing.py  campaigns.py  contacts.py  context.py  dashboard.py  discovery.py  enrollment.py  guards.py  messaging.py  notifications.py  runtime.py  search.py  settings.py  sourcing.py  suppression.py  tenancy.py
backend/app/core/: agent.py  config.py  crypto.py  db.py  llm.py  logging.py  providers.py  runtime.py  signing.py  types.py
backend/app/demo/: builder.py  conversations.py  data.py  seed.py
backend/app/ext/: apollo.py  base.py  cognism.py  demo.py  hunter.py  pdl.py  registry.py  unipile.py
backend/app/insights/: analytics.py  audit.py  dashboard.py
backend/app/outreach/: campaigns.py  enrollment.py  messaging.py
backend/app/people/: contacts.py  search.py  suppression.py
backend/migrations/: env.py
backend/tests/: conftest.py  fake_llm.py  test_agent_models.py  test_agent_runtime.py  test_ai_agents.py  test_auth.py  test_billing_stripe.py  test_campaign_create.py  test_channels.py  test_chat_agent.py  test_connections.py  test_credits.py  test_db.py  test_demo_seed.py  test_full_autonomy_e2e.py  test_governance.py  test_health.py  test_isolation.py  test_linkedin_connect.py  test_llm_adapters.py  test_loop.py  test_main_agent.py  test_no_any.py  test_outreach_agent.py  test_people_search.py  test_provenance.py  test_provider_selection.py  test_providers.py  test_scheduler_and_feed.py  test_security.py  test_sourcing_agent.py  test_strategy_agent.py  test_targeting.py  test_tenancy_api.py  test_tenancy_api_isolation.py  test_tenancy_models.py  test_unipile_channel.py  test_unipile_webhook.py
(+182 files in other folders)
