[project]
name = "sourcewell-backend"
version = "0.1.0"
description = "Sourcewell backend — AI outbound sequencing engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pgvector>=0.3.6",
    "python-ulid>=2.7",
    "cryptography>=44.0",
    "workos>=8.2.0",
    "anthropic>=0.112.0",
    "openai>=2.44.0",
    "google-genai>=2.10.0",
    "stripe>=15.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Note: `disallow_any_explicit` is intentionally NOT set — it false-positives on every pydantic
# `BaseModel` subclass (the `Any` is inherited from the library base, not our code). "No `Any` in
# our annotations" is instead enforced by tests/test_no_any.py, which greps the source.

# Alembic migrations are generated boilerplate — don't hold them to the app's strict bar.
[[tool.mypy.overrides]]
module = "migrations.*"
disallow_untyped_defs = false

# Tests legitimately assert runtime values mypy thinks are statically known (e.g. status != sent
# after a transition) — keep them Any-free + typed, but don't flag those intentional comparisons.
[[tool.mypy.overrides]]
module = "tests.*"
strict_equality = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "db: test requires the database (excluded from test-fast)",
]
